small spacing fix in course page in phone

--- a/public/css/course.css
+++ b/public/css/course.css
@@ -578,7 +578,7 @@ body {
     }
     .container h2 {
         text-align: center;
-        padding: 0 1rem 1.5rem 1rem;
+        padding: 0 1rem;
         font-size: 30px;
     }
     /*-----Connected-------*/
